header margins corrected, fix spacing

--- a/public/screen.css
+++ b/public/screen.css
@@ -7,7 +7,8 @@ html {
   background-color: black;
   color: whitesmoke;
   font-family: 'Roboto', sans-serif;
-  max-width: 900px;
+  /*max-width: 900px;*/
+
   display: flex;
   flex-direction: column;
   /* justify-content: center;
@@ -15,9 +16,11 @@ html {
 }
 
 body {
-  margin: 4;
+  margin: auto;
   min-height: 100%;
   display: flex;
+  width: 90%;
+  max-width: 900px;
 
   /* justify-content: flex-start;
   align-items: center; */
@@ -30,9 +33,9 @@ section {
 
 header {
   background-image: url('./Images/space.png');
-  max-width: 900px;
+  /* max-width: 900px; */
   max-height: 700px;
-  margin: 0 1%;
+  margin: 0;
   justify-content: center;
   align-items: center;
 }
